[project]
name = "device_toolkit"  # Required
version = "0.2.6a"  # Required
description = "Device control toolkit for Nvidia Jetson TX2 and Orin Nano"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["Jetson"]  # Optional
authors = [
  {name = "Yushu Wu", email = "wu.yushu@northeastern.edu" } # Optional
]
maintainers = [
  {name = "Yushu Wu", email = "wu.yushu@northeastern.edu" } # Optional
]

classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "sh",
  "tqdm",
]

[project.urls]  # Optional
"Homepage" = "https://github.com/wuyushuwys/DeviceToolkit"
"Bug Reports" = "https://github.com/wuyushuwys/DeviceToolkit/issues"
"Source" = "https://github.com/wuyushuwys/DeviceToolkit"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"